--- a/Public/styles.css
+++ b/Public/styles.css
@@ -1,5 +1,6 @@
 nav {
   display: inline-block;
+  font-size: 2rem;
 }
 
 ul {
@@ -7,8 +8,54 @@ ul {
   padding: 0%;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  vertical-align: basline;
+  background: transparent;
+  font-family: helvetica, arial, sans-serif;
+}
+
+.center {
+  margin: auto;
+  left: 50%;
+  top: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+
+#header {
+  overflow: hidden;
+  background-color: #14213d;
+  padding: 0%;
+  margin: 0px;
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 50px;
+  background-color: #f5f5f5;
+}
+
 .company {
   display: inline;
+  padding-left: 10px;
+  margin-top: 5px;
+}
+
+.navbar a {
+  color: #fca311;
 }
 
 .nav-item {
@@ -18,4 +65,90 @@ ul {
 
 .navbar-nav {
   display: inline;
+}
+
+.navbar-nav a {
+  font-size: 1.5rem;
+}
+
+#splash {
+  height: 40em;
+  background-color: #e5e5e5;
+  background-image: url(/Public/images/splashBackground.jpg);
+  background-size: cover;
+  border-radius: 10px;
+  margin: 0.7em;
+  position: relative;
+  font-size: 1.2rem;
+  margin-top: 50px;
+  color: #f99417;
+}
+
+#splash a {
+  color: #f99417;
+  font-size: 1.4rem;
+}
+
+#splash .title {
+  display: inline;
+  top: 35%;
+  width: 25%;
+  text-align: center;
+}
+
+#splash .search-buttons {
+  top: 45%;
+}
+
+#searchBar {
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 8px;
+  height: 2em;
+  width: 25em;
+  top: 55%;
+  background-color: #f5f5f5;
+}
+
+#searchBar input {
+  text-align: left;
+  width: 95%;
+  margin: 10px;
+  margin-top: 12px;
+}
+
+#cityCards {
+  position: relative;
+  height: 20em;
+}
+
+#cityCards h2 {
+  margin-top: 20px;
+  top: 0;
+}
+
+#cityCards ul {
+  padding-top: 5%;
+}
+
+#recentHomes {
+  position: relative;
+  height: 20em;
+}
+
+#recentHomes h2 {
+  margin-top: 20px;
+  top: 0;
+}
+
+#recentHomes ul {
+  padding-top: 5%;
+}
+
+.cards {
+  margin: 10px;
+}
+
+#footer {
+  position: relative;
 }
