--- a/Public/styles.css
+++ b/Public/styles.css
@@ -1,3 +1,11 @@
+/*
+Color Palette for the website:
+#363062 --Dark blue
+#4D4C7D --Pale blue
+#F99417 --Gold
+#F5F5F5 --"Off" white
+*/
+
 nav {
   display: inline-block;
   font-size: 2rem;
@@ -21,14 +29,6 @@ a {
   vertical-align: basline;
   background: transparent;
   font-family: helvetica, arial, sans-serif;
-}
-
-.center {
-  margin: auto;
-  left: 50%;
-  top: 50%;
-  position: absolute;
-  transform: translate(-50%, -50%);
 }
 
 #header {
@@ -59,7 +59,6 @@ a {
 }
 
 .nav-item {
-  padding: 0 18px 0 18px;
   display: inline;
 }
 
@@ -71,14 +70,20 @@ a {
   font-size: 1.5rem;
 }
 
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 10px;
+  margin: 0.7em;
+}
+
 #splash {
   height: 40em;
   background-color: #e5e5e5;
   background-image: url(/Public/images/splashBackground.jpg);
   background-size: cover;
-  border-radius: 10px;
-  margin: 0.7em;
-  position: relative;
   font-size: 1.2rem;
   margin-top: 50px;
   color: #f99417;
@@ -90,14 +95,31 @@ a {
 }
 
 #splash .title {
-  display: inline;
-  top: 35%;
-  width: 25%;
+  width: 30%;
   text-align: center;
+  padding-bottom: 30px;
+  font-size: 3rem;
 }
 
 #splash .search-buttons {
-  top: 45%;
+  width: 15%;
+}
+
+#splash .button {
+  width: 50%;
+  float: left;
+  text-align: center;
+  background-color: #4d4c7d80;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+#splash .button a {
+  font-size: 2rem;
+}
+
+#splash .button:hover {
+  background-color: #f5f5f5;
 }
 
 #searchBar {
@@ -118,26 +140,53 @@ a {
 }
 
 #cityCards {
-  position: relative;
-  height: 20em;
+  height: 30em;
 }
 
 #cityCards h2 {
-  margin-top: 20px;
+  margin-top: 60px;
+  margin-bottom: 20px;
   top: 0;
 }
 
-#cityCards ul {
-  padding-top: 5%;
+.cards {
+  display: flex;
+  width: 75%;
+  height: 100%;
+}
+
+.card {
+  background-color: #4d4c7d;
+  background-size: cover;
+  width: 45%;
+  border-radius: 10px;
+  margin: 0 5% 0;
+  /* box-shadow: 0 0 20px 20px rgba(0, 0, 0, 0.3) inset; */
+}
+
+.card h3 {
+  padding-left: 15px;
+  padding-top: 10px;
+  font-size: 1.5rem;
+  color: #f5f5f5;
+  text-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+#atlanta {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url(./images/atlanta.jpg);
+}
+
+#statesboro {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url(./images/statesboro.jpg);
 }
 
 #recentHomes {
-  position: relative;
   height: 20em;
 }
 
 #recentHomes h2 {
-  margin-top: 20px;
   top: 0;
 }
 
@@ -145,10 +194,9 @@ a {
   padding-top: 5%;
 }
 
-.cards {
-  margin: 10px;
-}
-
 #footer {
   position: relative;
+  text-align: center;
+  width: 50%;
+  margin: auto;
 }
