--- a/Public/styles.css
+++ b/Public/styles.css
@@ -6,16 +6,6 @@ Color Palette for the website:
 #F5F5F5 --"Off" white
 */
 
-nav {
-  display: inline-block;
-  font-size: 2rem;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0%;
-}
-
 a {
   text-decoration: none;
   color: black;
@@ -29,45 +19,45 @@ a {
   vertical-align: basline;
   background: transparent;
   font-family: helvetica, arial, sans-serif;
+  background-size: cover;
 }
 
 #header {
-  overflow: hidden;
-  background-color: #14213d;
-  padding: 0%;
-  margin: 0px;
+  font-size: 2rem;
 }
 
 .navbar {
   position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 9999;
   width: 100%;
-  height: 50px;
+  top: 0;
   background-color: #f5f5f5;
+  display: flex;
+  flex-direction: row;
 }
 
 .company {
-  display: inline;
-  padding-left: 10px;
-  margin-top: 5px;
+  margin: 5px;
+  margin-left: 20px;
+  margin-right: 0;
+  text-align: left;
+  width: 5%;
+  font-size: 2rem;
+  padding: 10px 0 10px;
 }
 
 .navbar a {
   color: #fca311;
 }
 
-.nav-item {
-  display: inline;
+#header .search-buttons {
+  margin: auto;
+  justify-content: left;
+  width: 100%;
+  font-size: 1.25rem;
 }
 
-.navbar-nav {
-  display: inline;
-}
-
-.navbar-nav a {
-  font-size: 1.5rem;
+#header .button {
+  padding: 10px 15px 10px;
 }
 
 .container {
@@ -105,10 +95,13 @@ a {
   width: 15%;
 }
 
-#splash .button {
-  width: 50%;
+.button {
   float: left;
   text-align: center;
+}
+
+#splash .button {
+  width: 50%;
   background-color: #4d4c7d80;
   border-radius: 10px;
   margin-bottom: 10px;
@@ -123,8 +116,6 @@ a {
 }
 
 #searchBar {
-  border-width: 1px;
-  border-style: solid;
   border-radius: 8px;
   height: 2em;
   width: 25em;
@@ -183,20 +174,83 @@ a {
 }
 
 #recentHomes {
-  height: 20em;
+  height: 25em;
 }
 
 #recentHomes h2 {
+  margin-top: 60px;
+  margin-bottom: 20px;
   top: 0;
 }
 
-#recentHomes ul {
-  padding-top: 5%;
+.house-card {
+  width: 15%;
+  padding: 0 0.75% 0;
+}
+
+#recentHomes .card {
+  width: 100%;
+  margin: auto;
+  height: 50%;
+}
+
+#recentHomes .card h3 {
+  font-size: 0.6rem;
+  color: black;
+}
+
+#recentHomes .bottom-info * {
+  padding: 1% 0;
+}
+
+#recentHomes .info {
+  display: flex;
+  margin: auto;
+  justify-content: left;
+}
+
+#recentHomes .info p {
+  display: inline;
+  text-align: left;
+  padding: 0;
+}
+
+#recentHomes .info-details {
+  display: flex;
+  margin: 0;
+  align-items: center;
+}
+
+.image {
+  margin: auto;
+}
+
+#recentHomes .info-details img {
+  height: 100%;
+  width: 20px;
+}
+
+.realtor p {
+  font-size: 0.75rem;
+}
+
+#house1 .card {
+  background-image: url(./images/House1.jpg);
+}
+
+#house2 .card {
+  background-image: url(./images/House2.jpg);
 }
 
 #footer {
-  position: relative;
   text-align: center;
   width: 50%;
+  vertical-align: bottom;
   margin: auto;
+  height: 1em;
+}
+
+#footer p {
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
