--- a/gata_real_estate/public/css/styles.css
+++ b/gata_real_estate/public/css/styles.css
@@ -31,7 +31,7 @@ a {
   position: fixed;
   width: 100%;
   top: 0;
-  background-color: #f5f5f5;
+  background-color: #363062;
   display: flex;
   flex-direction: row;
 }
